Enable Java 11 compatibility
Use archaic gradle version, plugins and Java compiler